Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103248

warning C4996: 'QtLiterals::operator ""_qs': Use _s from Qt::StringLiterals namespace instead

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.4.0 Beta1
    • 6.4.0 FF
    • Qt Http Server
    • None
    • f654fae7f1 (qt/qthttpserver/dev) f654fae7f1 (qt/qthttpserver/6.4)

    Description

      \Users\qt\work\qt\qthttpserver\src\httpserver\qhttpserverrequest.cpp
      agent:2022/05/05 04:15:53 build.go:394: \Users\qt\work\qt\qthttpserver\src\httpserver\qhttpserverrequest.cpp(259): error C2220: the following warning is treated as an error
      agent:2022/05/05 04:15:54 build.go:394: \Users\qt\work\qt\qthttpserver\src\httpserver\qhttpserverrequest.cpp(259): warning C4996: 'QtLiterals::operator ""_qs': Use _s from Qt::StringLiterals namespace instead.
      agent:2022/05/05 04:15:54 build.go:394: \Users\qt\work\qt\qthttpserver\src\httpserver\qhttpserverrequest.cpp(266): warning C4996: 'QtLiterals::operator ""_qs': Use _s from Qt::StringLiterals namespace instead.
      

      Build log: https://testresults.qt.io/logs/qt/qthttpserver/49a91391aa6398258745c16020319786f8e11dc0/WindowsWindows_11_21H2x86_64WindowsWindows_11_21H2x86_64MSVC2019qtci-windows-11_21H2-x86_64-51-615aaaDebugAndRelease_Sccache_WarningsAreErrors/8b4b0538c0934378967dd75aaeeee0f68d291a53/build_1651723977/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qthttpserver/tasks/1651723957

      Tested changes (refs/builds/qtci/dev/1651723955):

      https://codereview.qt-project.org/c/qt/qthttpserver/+/409712/2 Update dependencies on 'dev' in qt/qthttpserver

      Attachments

        For Gerrit Dashboard: QTBUG-103248
        # Subject Branch Project Status CR V

        Activity

          People

            sonakur Sona Kurazyan
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes