Replace uses of deprecated _qs with _s

Fixes: QTBUG-103248
Change-Id: Idc78a000cd39d453131d48137bcb8c81ab380962
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Ievgenii Meshcheriakov <ievgenii.meshcheriakov@qt.io>